--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
     </div>
     <div class="seclinks">
      <a href="javascript:void(0);" id="ham" style="float:right;margin:1rem;"onclick="myFunction()">
-      <img src="images/hamburg.svg" width="25" height="25">
+      <img src="images/hamburg.svg" alt="Mobile menu icon" aria-label="Click to browse Itsy Bitsy's Gallery by photos, posters, or videos." width="25" height="25">
      </a>
      <div class="seclinksb" id="link">
       <a href="#photos"><b>PHOTOS</b></a>
