--- a/gallery.html
+++ b/gallery.html
@@ -79,8 +79,8 @@
    }
   }
  </script>
-  <section>
-  <div class="container" id="photos" style="padding-bottom:0;">
+  <section id="photos">
+  <div class="container" style="padding-bottom:0;">
    <div class="header">
     <h1 style="color:white;font-family:sans-serif;">PHOTOS</h1>
    </div>
@@ -199,8 +199,8 @@
    </div>
   </div>
   </section>
-  <section>
-  <div class="container" id="posters">
+  <section id="posters">
+  <div class="container">
    <div class="header">
     <h1 style="color:white;font-family:sans-serif;">POSTERS</h1>
    </div>
@@ -276,8 +276,8 @@
    </div>
   </div>
   </section>
-  <section>
-  <div class="container" id="videos" loading="lazy">
+  <section id="videos">
+  <div class="container" loading="lazy">
    <div class="header">
     <h1 style="color:white;font-family:sans-serif;">VIDEOS</h1>
    </div>
