some cleaning up around ./ and /shows

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
   <ul style="list-style-type:none;padding:0;margin:0;" class="menbar">
    <li>
-    <a href="./gallery" style="text-decoration:none;" aria-label="The 'Gallery' page of Itsy Bitsy's website" target="_self">
+    <a href="./gallery" style="text-decoration:none;font-size:24px;" aria-label="The 'Gallery' page of Itsy Bitsy's website" target="_self">
      <button class="men" aria-label="Click to see photos of Itsy Bitsy">
-      <p style="color:white;font-size:12px;" class="buttonp"><b>GALLERY</b></p>
+      <p style="color:white;" class="buttonp"><b>GALLERY</b></p>
      </button>
     </a>
    </li>
