--- a/shows.html
+++ b/shows.html
@@ -2,10 +2,10 @@
 <!-- Site developed by Brian M. Dyer-->
 <html lang="en">
  <head>
-  <title>See Itsy Bitsy on November 2nd!</title>
+  <title>See Itsy Bitsy with Blush on December 14th!</title>
   <link rel="canonical" href="https://itsybitsyband.com/shows">
-  <meta name="description" content="See details about Itsy Bitsy's upcoming show on November 2nd! The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
-  <link rel="stylesheet" href="shows.styles.css">
+  <meta name="description" content="See details about Itsy Bitsy's upcoming show with Blush on December 14th! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <link rel="stylesheet" href="shows.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,15 +14,15 @@
   <meta property="og:url" content="https://itsybitsyband.com/shows">
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/og/itsyposter.24.11.2.webp">
-  <meta property="og:title" content="See Itsy Bitsy On November 2nd!">
-  <meta property="og:description" content="See details about Itsy Bitsy's upcoming show on November 2nd! The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta property="og:title" content="See Itsy Bitsy with Blush on December 14th!">
+  <meta property="og:description" content="See details about Itsy Bitsy's upcoming show with Blush on December 14th! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="itsybitsyband.com/shows">
   <meta property="twitter:url" content="https://itsybitsyband.com/shows">
-  <meta name="twitter:title" content="Shows | Itsy Bitsy">
+  <meta name="twitter:title" content="See Itsy Bitsy with Blush on December 14th!">
   <meta property="twitter:site" content="@ItsyTweetsy">
-  <meta name="twitter:description" content="The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy">
+  <meta name="twitter:description" content="See details about Itsy Bitsy's upcoming show with Blush on December 14th! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
   <meta name="twitter:image" content="images/og/itsyposter.24.11.2.webp">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
@@ -34,9 +34,6 @@
   <meta name="theme-color" content="#ffffff">
  </head>
  <body>
-  <a target="_blank" href="images/itsyposter.24.11.2.webp">
-  <img src="images/itsyposter.24.11.2.webp" alt="Itsy Bitsy's show flyer for November 2nd" class="centerposter">
-  </a>
   <ul style="list-style-type:none;padding:0;margin:0;" class="menbar">
    <li>
     <a href="./" style="text-decoration:none;" aria-label="The home page of Itsy Bitsy's website" target="_self">
@@ -46,9 +43,12 @@
     </a>
    </li>
   </ul>
+  <a target="_blank" href="images/itsyposter.24.11.2.webp">
+  <img src="images/showposters/hwposterhd.webp" alt="Itsy Bitsy's show flyer for December 14th." class="centerposter">
+  </a>
   <ul style="list-style-type:none;padding:0;margin:0;" class="socbar">
    <li>
-    <a href="https://www.google.com/maps/place/folks/@43.621995,-116.220756,16z/data=!4m6!3m5!1s0x54aef9ee058c3aed:0x84036d7f11826069!8m2!3d43.6219949!4d-116.2207557!16s%2Fg%2F11v5c1rw5t?hl=en&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D" style="text-decoration:none;" aria-label="Link to the location of Itsy Bitsy's show" target="_blank">
+    <a href="https://www.google.com/maps/place/folks/@43.621995,-116.220756,16z/data=!4m6!3m5!1s0x54aef9ee058c3aed:0x84036d7f11826069!8m2!3d43.6219949!4d-116.2207557!16s%2Fg%2F11v5c1rw5t?hl=en&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D" style="text-decoration:none;" aria-label="Link to the Google Maps location of Itsy Bitsy's upcoming show." target="_blank">
      <button class="soc" aria-label="Click to view the location of Itsy Bitsy's next show">
       <img src="images/shows/venueicon.svg" style="width:75px;height:50px;margin:auto;" alt="Venue icon">
      </button>
