--- a/shows.html
+++ b/shows.html
@@ -34,26 +34,43 @@
   <meta name="theme-color" content="#ffffff">
  </head>
  <body>
-  <ul style="list-style-type:none;padding:0;margin:0;" class="menbar">
-   <li>
+  <div class="container" style="justify-content:center;">
     <a href="./" style="text-decoration:none;" aria-label="The home page of Itsy Bitsy's website" target="_self">
      <button class="men" aria-label="Click to return to the main page">
       <p style="color:white;font-size:14px;" class="buttonp"><b>RETURN</b></p>
      </button>
     </a>
-   </li>
-  </ul>
-  <a target="_blank" href="images/itsyposter.24.11.2.webp">
-  <img src="images/showposters/hwposterhd.webp" alt="Itsy Bitsy's show flyer for December 14th." class="centerposter">
-  </a>
-  <ul style="list-style-type:none;padding:0;margin:0;" class="socbar">
-   <li>
+   </div>
+   <div class="container" style="justify-content:center;align-items:center;padding-bottom:0;">
+    <div class="poster-container">
+     <a target="_blank" href="images/showposters/hwposterhd.webp">
+     <picture>
+      <source media="(max-width:400px)" srcset="images/showposters/responsive/hwposterhd-400w.webp">
+      <source media="(max-width:600px)" srcset="images/showposters/responsive/hwposterhd-600w.webp">
+      <source media="(max-width:800px)" srcset="images/showposters/responsive/hwposterhd-800w.webp">
+      <source media="(max-width:1000px)" srcset="images/showposters/responsive/hwposterhd-1000w.webp">
+      <img src="images/showposters/hwposterhd.webp" loading="lazy" width="1280" height="1515" alt="Image of a promotional poster for Itsy Bitsy's EP concert with Blush on December 14th, 2024.">
+     </picture>
+     </a>
+    </div>
+   </div>
+   <div class="container" style="justify-content:center;align-items:center;">
+    <div class="logo-container">
+     <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
+     <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
+    </div>
+   </div>
+   <div class="container" style="justify-content:center;">
     <a href="https://www.google.com/maps/place/folks/@43.621995,-116.220756,16z/data=!4m6!3m5!1s0x54aef9ee058c3aed:0x84036d7f11826069!8m2!3d43.6219949!4d-116.2207557!16s%2Fg%2F11v5c1rw5t?hl=en&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D" style="text-decoration:none;" aria-label="Link to the Google Maps location of Itsy Bitsy's upcoming show." target="_blank">
      <button class="soc" aria-label="Click to view the location of Itsy Bitsy's next show">
       <img src="images/shows/venueicon.svg" style="width:75px;height:50px;margin:auto;" alt="Venue icon">
      </button>
     </a>
-  </ul>
-  <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy. Tovi, Lilly, Maz, Jack, and Brian.</p>
+   </div>
+   <div class="container" style="justify-content:center;">
+   <div class="footer">
+    <p style="color:white;font-size:12px;float:right;" class="bottomright">©2024 Itsy Bitsy.</p>
+   </div>
+  </div>
  </body>
 </html>
