--- a/404.html
+++ b/404.html
@@ -2,11 +2,19 @@
 permalink: /404.html
 ---
 <!DOCTYPE html>
-     <head>
-          <title>Itsy Bitsy 404</title>
-          <link rel="stylesheet" href="style1.css">
-     </head>
-     <body>
-          <h1>Looks like you ran into a bit of an Itsy Bitsy 404...</h1>
-     </body>
+<html style="background-color:#000000;">
+ <head>
+  <title>Itsy Bitsy 404</title>
+  <link rel="stylesheet" href="style1.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/fstuff/favicon-16x16.png">
+  <link rel="manifest" href="images/fstuff/site.webmanifest">
+  <link rel="mask-icon" href="images/fstuff/safari-pinned-tab.svg" color="#e00971">
+  <meta name="msapplication-TileColor" content="#ff0000">
+  <meta name="theme-color" content="#ffffff">
+ </head>
+ <body>
+  <h1 style="color:white;">Looks like you ran into a bit of an <i>Itsy Bitsy</i> 404...</h1>
+ </body>
 </html>
