--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
   <meta name="theme-color" content="#ffffff">
  </head>
  <body>
-  <div class="container" id="navbar" style="background-color:#000000;padding:1.5rem;">
+  <div class="container" id="navbar" style="background-color:#000000;padding:0.3rem;">
    <div class="menubar">
     <div class="pagelinks">
      <a href="./" style="text-decoration:none;" aria-label="The home page of Itsy Bitsy's website" target="_self">
@@ -81,7 +81,7 @@
      <source media="(max-width:1000px)" srcset="images/band/responsive/9-1000w.webp">
      <source media="(max-width:1200px)" srcset="images/band/responsive/9-1200w.webp">
      <source media="(max-width:1600px)" srcset="images/band/responsive/9-1600w.webp">
-     <img src="images/band/9.webp" width="2048" height="1536" alt="Image of Itsy Bitsy standing in the middle of a street. From left to right: Tovi Chance, Lilly Furlow, Brian Dyer, Jack Tiderman, Maz Della Badia.">
+     <img src="images/band/9.webp" width="2048" height="1536" alt="Image of Itsy Bitsy standing in the middle of a street in Boise, Idaho. From left to right: Tovi Chance, Lilly Furlow, Brian Dyer, Jack Tiderman, Maz Della Badia.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/12-400w.webp">
@@ -103,7 +103,7 @@
      <source media="(max-width:400px)" srcset="images/band/responsive/11-400w.webp">
      <source media="(max-width:600px)" srcset="images/band/responsive/11-600w.webp">
      <source media="(max-width:800px)" srcset="images/band/responsive/11-800w.webp">
-     <img src="images/band/11.webp" width="1099" height="1099" alt="Image of Itsy Bitsy sitting down by a wall in a shopping center. From left to right: Jack Tiderman, Tovi Chance, Lilly Furlow, Maz Della Badia, Brian Dyer.">
+     <img src="images/band/11.webp" width="1099" height="1099" alt="Image of Itsy Bitsy sitting down by a wall in a shopping center in Boise, Idaho. From left to right: Jack Tiderman, Tovi Chance, Lilly Furlow, Maz Della Badia, Brian Dyer.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/8-400w.webp">
@@ -117,7 +117,7 @@
      <source media="(max-width:400px)" srcset="images/band/responsive/6-400w.webp">
      <source media="(max-width:600px)" srcset="images/band/responsive/6-600w.webp">
      <source media="(max-width:800px)" srcset="images/band/responsive/6-800w.webp">
-     <img src="images/band/6.webp" width="1000" height="1500" alt="Image of Tovi Chance singing inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
+     <img src="images/band/6.webp" width="1000" height="1500" alt="Image of Tovi Chance singing inside of Folks Candle shop in Boise, Idaho on November 10th, 2023. Photo taken by Michael Floyd.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/13-400w.webp">
@@ -140,7 +140,7 @@
      <source media="(max-width:1000px)" srcset="images/band/responsive/10-1000w.webp">
      <source media="(max-width:1200px)" srcset="images/band/responsive/10-1200w.webp">
      <source media="(max-width:1600px)" srcset="images/band/responsive/10-1600w.webp">
-     <img src="images/band/10.webp" loading="lazy" width="1852" height="1125" alt="Head-on shot image of Itsy Bitsy sitting down by a wall in a shopping center. From left to right: Jack Tiderman, Tovi Chance, Lilly Furlow, Maz Della Badia, Brian Dyer.">
+     <img src="images/band/10.webp" loading="lazy" width="1852" height="1125" alt="Head-on shot image of Itsy Bitsy sitting down by a wall in a shopping center in Boise, Idaho. From left to right: Jack Tiderman, Tovi Chance, Lilly Furlow, Maz Della Badia, Brian Dyer.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/14-400w.webp">
@@ -149,7 +149,7 @@
      <source media="(max-width:1000px)" srcset="images/band/responsive/14-1000w.webp">
      <source media="(max-width:1200px)" srcset="images/band/responsive/14-1200w.webp">
      <source media="(max-width:1600px)" srcset="images/band/responsive/14-1600w.webp">
-     <img src="images/band/14.webp" loading="lazy" width="2048" height="1536" alt="Image of Itsy Bitsy playing at Folks candle shop on November 10th, 2023. From left to right: Brian Dyer playing drums, Lilly Furlow playing guitar, Tovi Chance holding a microphone, Jack Tiderman playing bass, and Maz Della Badia playing guitar.">
+     <img src="images/band/14.webp" loading="lazy" width="2048" height="1536" alt="Image of Itsy Bitsy playing at Folks candle shopin Boise, Idaho on November 10th, 2023. From left to right: Brian Dyer playing drums, Lilly Furlow playing guitar, Tovi Chance holding a microphone, Jack Tiderman playing bass, and Maz Della Badia playing guitar.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/2-400w.webp">
@@ -199,7 +199,7 @@
      <source media="(max-width:600px)" srcset="images/showposters/responsive/hwposterhd-600w.webp">
      <source media="(max-width:800px)" srcset="images/showposters/responsive/hwposterhd-800w.webp">
      <source media="(max-width:1000px)" srcset="images/showposters/responsive/hwposterhd-1000w.webp">
-     <img src="images/showposters/hwposterhd.webp" loading="lazy" width="1280" height="1515" alt="Image of a promotional poster for Itsy Bitsy's Halloween concert at Folks on November 2nd, 2024.">
+     <img src="images/showposters/hwposterhd.webp" loading="lazy" width="1280" height="1515" alt="Image of a promotional poster for Itsy Bitsy's Halloween concert at Folks in Boise, Idaho on November 2nd, 2024.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/showposters/responsive/gradposterhd-400w.webp">
@@ -207,12 +207,12 @@
      <source media="(max-width:800px)" srcset="images/showposters/responsive/gradposterhd-800w.webp">
      <source media="(max-width:1000px)" srcset="images/showposters/responsive/gradposterhd-1000w.webp">
      <source media="(max-width:1200px)" srcset="images/showposters/responsive/gradposterhd-1200w.webp">
-     <img src="images/showposters/gradposterhd.webp" loading="lazy" width="1440" height="1800" alt="Image of a promotional poster for Itsy Bitsy's graduation party concert on June 6th, 2024.">
+     <img src="images/showposters/gradposterhd.webp" loading="lazy" width="1440" height="1800" alt="Image of a promotional poster for Itsy Bitsy's graduation party concert in Boise, Idaho on June 6th, 2024.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/showposters/responsive/folks1posterhd-400w.webp">
      <source media="(max-width:600px)" srcset="images/showposters/responsive/folks1posterhd-600w.webp">
-     <img src="images/showposters/folks1posterhd.webp" loading="lazy" width="805" height="927" alt="Scanned image of a promotional poster for Itsy Bitsy's first concert at Folks on November 10th, 2023.">
+     <img src="images/showposters/folks1posterhd.webp" loading="lazy" width="805" height="927" alt="Scanned image of a promotional poster for Itsy Bitsy's first concert at Folks in Boise, Idaho on November 10th, 2023.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/showposters/responsive/ghosthausposterhd-400w.webp">
@@ -220,7 +220,7 @@
      <source media="(max-width:800px)" srcset="images/showposters/responsive/ghosthausposterhd-800w.webp">
      <source media="(max-width:1000px)" srcset="images/showposters/responsive/ghosthausposterhd-1000w.webp">
      <source media="(max-width:1200px)" srcset="images/showposters/responsive/ghosthausposterhd-1200w.webp">
-     <img src="images/showposters/ghosthausposterhd.webp" loading="lazy" width="1440" height="1800" alt="Image of a promotional poster for Itsy Bitsy's concert with bands Dead Register and Mall Goth Moths on September 1st, 2023.">
+     <img src="images/showposters/ghosthausposterhd.webp" loading="lazy" width="1440" height="1800" alt="Image of a promotional poster for Itsy Bitsy's concert with bands Dead Register and Mall Goth Moths in Star, Idaho on September 1st, 2023.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/showposters/responsive/gracieposter1hd-400w.webp">
@@ -304,7 +304,7 @@
   </div>
   </section>
   <div class="footer">
-   <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy. Tovi, Lilly, Maz, Jack, and Brian.</p>
+   <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy.</p>
   </div>
  </body>
 </html>
