--- a/index.html
+++ b/index.html
@@ -35,15 +35,18 @@
  </head>
  <body>
   <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
-  <ul style="list-style-type:none;padding:0;margin:0;" class="menbar">
-   <li>
+   <div class="container" style="justify-content:center;align-items:center;">
+    <a href="./shows" style="text-decoration:none;font-size:24px;" aria-label="The 'Shows' page of Itsy Bitsy's website" target="_self">
+     <button class="men" id="shows" aria-label="Click to see Itsy Bitsy's upcoming shows.">
+      <p style="color:white;" class="buttonp"><b>SHOWS</b></p>
+     </button>
+    </a>
     <a href="./gallery" style="text-decoration:none;font-size:24px;" aria-label="The 'Gallery' page of Itsy Bitsy's website" target="_self">
-     <button class="men" aria-label="Click to see photos of Itsy Bitsy">
+     <button class="men" id="gallery" aria-label="Click to see photos of Itsy Bitsy">
       <p style="color:white;" class="buttonp"><b>GALLERY</b></p>
      </button>
     </a>
-   </li>
-  </ul>
+   </div>
   <ul style="list-style-type:none;padding:0;margin:0;" class="socbar">
    <li>
     <a href="https://instagram.com/theitsybitsyband" aria-label="Itsy Bitsy's Instagram page" target="_blank">
@@ -74,6 +77,6 @@
     </a>
    </li>
   </ul>
-  <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy. Tovi, Lilly, Maz, Jack, and Brian.</p>
+  <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy.</p>
  </body>
 </html>
