--- a/shows.html
+++ b/shows.html
@@ -2,9 +2,9 @@
 <!-- Site developed by Brian M. Dyer-->
 <html lang="en">
  <head>
-  <title>See Itsy Bitsy with Blush on December 14th!</title>
+  <title>Shows | Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com/shows">
-  <meta name="description" content="See details about Itsy Bitsy's upcoming show with Blush on December 14th! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
   <link rel="stylesheet" href="shows.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
@@ -13,17 +13,17 @@
   
   <meta property="og:url" content="https://itsybitsyband.com/shows">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="images/og/itsyposter.24.11.2.webp">
-  <meta property="og:title" content="See Itsy Bitsy with Blush on December 14th!">
-  <meta property="og:description" content="See details about Itsy Bitsy's upcoming show with Blush on December 14th! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta property="og:image" content="images/og/showshar.png">
+  <meta property="og:title" content="Shows | Itsy Bitsy">
+  <meta property="og:description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="itsybitsyband.com/shows">
   <meta property="twitter:url" content="https://itsybitsyband.com/shows">
-  <meta name="twitter:title" content="See Itsy Bitsy with Blush on December 14th!">
+  <meta name="twitter:title" content="Shows | Itsy Bitsy">
   <meta property="twitter:site" content="@ItsyTweetsy">
-  <meta name="twitter:description" content="See details about Itsy Bitsy's upcoming show with Blush on December 14th! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
-  <meta name="twitter:image" content="images/og/itsyposter.24.11.2.webp">
+  <meta name="twitter:description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="twitter:image" content="images/og/showshar.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
@@ -34,40 +34,46 @@
   <meta name="theme-color" content="#ffffff">
  </head>
  <body>
-  <div class="container" style="justify-content:center;">
-    <a href="./" style="text-decoration:none;" aria-label="The home page of Itsy Bitsy's website" target="_self">
+  <div class="container" style="background-color:#000000;position:sticky;top:0;padding:0.3rem;>
+  <div class="container">
+    <a href="./" aria-label="The home page of Itsy Bitsy's website" target="_self" style="text-decoration:none;">
      <button class="men" aria-label="Click to return to the main page">
-      <p style="color:white;font-size:14px;" class="buttonp"><b>RETURN</b></p>
+      <p style="color:black;font-size:24px;" class="buttonp"><b>HOME</b></p>
      </button>
     </a>
    </div>
-   <div class="container" style="justify-content:center;align-items:center;padding-bottom:0;">
-    <div class="poster-container">
-     <a target="_blank" href="images/showposters/hwposterhd.webp">
+  </div>
+  <section style="background-color:#1C1C1C;">
+   <div class="container" style="padding-bottom:0;">
+    <div class="header">
+     <h1 style="color:white;font-family:sans-serif;font-size:25px;">Itsy Bitsy's Next Show</h1>
+     <h2 style="color:white;font-family:sans-serif;font-size:16px;"><br>- Date: TBA -</h2>
+    </div>
+    <div class="poster-container" style="align-self:center;display:inline-block;">
+     <a target="_blank" href="images/showposters/placeholder.webp">
      <picture>
-      <source media="(max-width:400px)" srcset="images/showposters/responsive/hwposterhd-400w.webp">
-      <source media="(max-width:600px)" srcset="images/showposters/responsive/hwposterhd-600w.webp">
-      <source media="(max-width:800px)" srcset="images/showposters/responsive/hwposterhd-800w.webp">
-      <source media="(max-width:1000px)" srcset="images/showposters/responsive/hwposterhd-1000w.webp">
-      <img src="images/showposters/hwposterhd.webp" loading="lazy" width="1280" height="1515" alt="Image of a promotional poster for Itsy Bitsy's EP concert with Blush on December 14th, 2024.">
+      <img src="images/showposters/placeholder.webp" width="1280" height="1515" alt="Placeholder image for the poster on the "Shows" page">
      </picture>
      </a>
     </div>
    </div>
-   <div class="container" style="justify-content:center;align-items:center;">
+   <div class="container" style="justify-content:center;align-items:center;display:none;padding-bottom:0;">
     <div class="logo-container">
-     <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
-     <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
+     <img src="images/logo.svg" alt="Itsy Bitsy logo" style="width:50%;height:auto;">
+     <img src="images/blushlogo.svg" alt="Blush logo" style="width:50%;height:auto;">
     </div>
    </div>
-   <div class="container" style="justify-content:center;">
+   <div class="container" style="justify-content:center;align-items:center;display:none;">
     <a href="https://www.google.com/maps/place/folks/@43.621995,-116.220756,16z/data=!4m6!3m5!1s0x54aef9ee058c3aed:0x84036d7f11826069!8m2!3d43.6219949!4d-116.2207557!16s%2Fg%2F11v5c1rw5t?hl=en&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D" style="text-decoration:none;" aria-label="Link to the Google Maps location of Itsy Bitsy's upcoming show." target="_blank">
      <button class="soc" aria-label="Click to view the location of Itsy Bitsy's next show">
-      <img src="images/shows/venueicon.svg" style="width:75px;height:50px;margin:auto;" alt="Venue icon">
+      <img src="images/shows/venueicon.svg" style="width:90px;height:60px;margin:auto;" alt="Venue icon">
      </button>
     </a>
    </div>
-   <div class="container" style="justify-content:center;">
+   <div class="container" style="justify-content:center;align-items:center;display:flex;padding-bottom:10rem;">
+   </div>
+  </section>
+   <div class="container" style="justify-content:center;align-items:center;display:flex;background-color: #000000;">
    <div class="footer">
     <p style="color:white;font-size:12px;float:right;" class="bottomright">©2024 Itsy Bitsy.</p>
    </div>
