music page (post-EP release)
added /music page

--- a/gallery.html
+++ b/gallery.html
@@ -64,6 +64,7 @@
      y.style.display = "inline-block";
    } else {
      x.style.display = "inline-block";
+     x.style.margin = "0.5rem";
      y.style.display = "none";
    }
   }
