--- a/index.html
+++ b/index.html
@@ -36,14 +36,19 @@
  <body>
   <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
    <div class="container" style="justify-content:center;align-items:center;">
-    <a href="./shows" style="text-decoration:none;font-size:24px;" aria-label="The 'Shows' page of Itsy Bitsy's website" target="_self">
-     <button class="men" id="shows" aria-label="Click to see Itsy Bitsy's upcoming shows.">
-      <p style="color:white;" class="buttonp"><b>SHOWS</b></p>
+    <a href="./music" style="text-decoration:none;font-size:24px;" aria-label="The 'Music' page of Itsy Bitsy's website" target="_self">
+     <button class="men" id="music" aria-label="Click to view Itsy Bitsy's music releases.">
+      <p style="color:white;" class="buttonp"><b>MUSIC</b></p>
      </button>
     </a>
     <a href="./gallery" style="text-decoration:none;font-size:24px;" aria-label="The 'Gallery' page of Itsy Bitsy's website" target="_self">
      <button class="men" id="gallery" aria-label="Click to see photos of Itsy Bitsy">
       <p style="color:white;" class="buttonp"><b>GALLERY</b></p>
+     </button>
+    </a>
+    <a href="./shows" style="text-decoration:none;font-size:24px;" aria-label="The 'Shows' page of Itsy Bitsy's website" target="_self">
+     <button class="men" id="shows" aria-label="Click to see Itsy Bitsy's upcoming shows.">
+      <p style="color:white;" class="buttonp"><b>SHOWS</b></p>
      </button>
     </a>
    </div>
