--- a/music.html
+++ b/music.html
@@ -7,13 +7,13 @@
   <meta name="description" content="The official website for the music of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
   <link rel="stylesheet" href="music.css">
   <meta name="googlebot" content="notranslate">
-  <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, itsy bitsy photos, pictures, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
+  <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, itsy bitsy music, songs, Itsy Bitsy music, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
   <meta property="og:url" content="https://itsybitsyband.com/music">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="images/og/galleryshar.png">
+  <meta property="og:image" content="images/og/musicshar.png">
   <meta property="og:title" content="Music | Itsy Bitsy">
   <meta property="og:description" content="The official website for the music of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
 
@@ -23,7 +23,7 @@
   <meta name="twitter:title" content="Music | Itsy Bitsy">
   <meta property="twitter:site" content="@ItsyTweetsy">
   <meta name="twitter:description" content="The official website for the music of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
-  <meta name="twitter:image" content="images/og/galleryshar.png">
+  <meta name="twitter:image" content="images/og/musicshar.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
@@ -45,10 +45,12 @@
     </div>
     <div class="seclinks">
      <a href="javascript:void(0);" id="ham" style="float:right;margin:1rem;"onclick="myFunction()">
-      <img src="images/hamburg.svg" alt="Mobile menu icon" aria-label="Click to browse Itsy Bitsy's Gallery by photos, posters, or videos." width="25" height="25">
+      <img src="images/hamburg.svg" alt="Mobile menu icon" aria-label="Click to view links to Itsy Bitsy's official music profiles on Spotify, Apple Music, and more." width="25" height="25">
      </a>
      <div class="seclinksb" id="link">
-      <a href="#eps"><b>EPS</b></a>
+      <a href="https://open.spotify.com/artist/2Bexl9uDDLnCoiMDOmIsPt" style="margin:0 0.5rem;" target="_blank"><img src="images/social/spoofywhite.svg" width="35" height="35"></a>
+      <a href="https://music.apple.com/us/artist/itsy-bitsy/1785684575" style="margin:0 0.5rem;" target="_blank"><img src="images/social/appelwhite.svg" width="35" height="35"></a>
+      <a href="https://music.youtube.com/channel/UC_iOTm87kzzN3RdAGgQNW0A?si=yxTx2JLeVtC2qHIZ" style="margin:0 0.5rem;" target="_blank"><img src="images/social/ytm.white.svg" width="35" height="35"></a>
      </div>
     </div>
    </div>
@@ -66,23 +68,21 @@
    }
   }
  </script>
-<section id="eps">
-  <div class="container" style="padding-bottom:0;">
+  <section id="ep">
+  <div class="container" style="padding-bottom:30vh;">
    <div class="header">
     <h1 style="color:white;font-family:sans-serif;">EPs</h1>
    </div>
    <div class="image-container">
-    <a href="music/itsy-bitsy.html" target="_blank" style="text-decoration:none;" id="itsy-bitsy">
-     <picture>
-     <source media="(max-width:400px)" srcset="images/covers/responsive/12-400w.webp">
-     <source media="(max-width:600px)" srcset="images/covers/responsive/12-600w.webp">
-     <source media="(max-width:800px)" srcset="images/covers/responsive/12-800w.webp">
-     <source media="(max-width:1000px)" srcset="images/covers/responsive/12-1000w.webp">
-     <img src="images/band/12.webp" width="1253" height="1253" alt="Image of the cover art for Itsy Bitsy's self-titled EP.">
+    <a href="https://distrokid.com/hyperfollow/itsybitsy/itsy-bitsy" style="text-decoration:none;" target="_blank">
+    <picture>
+     <img src="images/covers/ep.webp" width="3744" height="3744" alt="The cover art for Itsy Bitsy's self-titled debut EP.">
     </picture>
-    <h2 class="music-title" style="font-family:sans-serif;color:white;"><i>Itsy Bitsy</i></h2>
+    <h2 style="color:white;font-family:sans-serif;display:inline;"><i>Itsy Bitsy</i> [EP]</h2>
    </a>
+   </div>
   </div>
+  </section>
   <div class="footer">
    <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy.</p>
   </div>
